--- a/notify/groups.yaml
+++ b/notify/groups.yaml
@@ -3,31 +3,28 @@
   platform: group
   services:
     - service: mobile_app_mark_moto_g5
+    - service: mobile_app_mark_redmi_9a
 
 - name: admin
   platform: group
   services:
     - service: mobile_app_mark_s_iphone
     - service: mobile_app_mark_moto_g5
+    - service: mobile_app_mark_redmi_9a
 
 # All Barnmates
 - name: whalebarn
   platform: group
   services:
     - service: mobile_app_mark_s_iphone
-    - service: ios_annies_iphone2
-    - service: html5_marktablet
     - service: mobile_app_mark_moto_g5
-    - service: ios_moncoms_iphone
-    - service: mobile_app_annies_iphone_4
-    - service: mobile_app_moncoms_iphone
-    - service: mobile_app_olga_huawei
+    - service: mobile_app_mark_redmi_9a
+    - service: mobile_app_iphone
 
 # Barnacles
 - name: barnacles
   platform: group
   services:
-    - service: mobile_app_liane_moto_g5
     - service: mobile_app_thomas_cmtcd
 
 # All Devices
@@ -43,9 +40,7 @@
   platform: group
   services:
     - service: mobile_app_mark_s_iphone
-    - service: ios_annies_iphone2
-    - service: mobile_app_annies_iphone_4
-    - service: mobile_app_moncoms_iphone
+    - service: mobile_app_iphone
 
 # All androids
 - name: all_androids
@@ -53,7 +48,7 @@
   services:
     - service: html5_lianemotog
     - service: mobile_app_mark_moto_g5
-    - service: mobile_app_olga_huawei
+    - service: mobile_app_mark_redmi_9a
 
 # All tablets
 - name: all_tablets
